fixed z-index for discount box

--- a/app/assets/stylesheets/stream.css.scss
+++ b/app/assets/stylesheets/stream.css.scss
@@ -66,7 +66,7 @@
         width: 50px;
         height: 50px;
         border: 2px solid #000;
-        z-index: 1000;
+        z-index: 3;
         background: #fff;
 
         div {
